--- a/assignment4.html
+++ b/assignment4.html
@@ -14,12 +14,15 @@
         <form class="flexsearch-form" id="mainForm">
           <div class="flexsearch-input-wrapper">
             <input class="flexsearch-input" type="search" placeholder="search">
+						<div id="search_div">
+							<ul>
+							</ul>
+						</div>
           </div>
           <input class="flexsearch-submit" type="submit" value="&#10140;"/>
         </form>
       </div>
     </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="assignment4.js"></script>
